--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/jayvicsanantonio/tracknstick-api#readme",
   "description": "",
   "dependencies": {
+    "@clerk/express": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
