--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "helmet": "^8.0.0",
     "knex": "^3.1.0",
     "nodemon": "^3.1.9",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "eslint": "^8.57.1",
