--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "format": "prettier --write \"**/*.js\"",
     "db:migrate": "knex migrate:latest",
     "db:rollback": "knex migrate:rollback",
-    "db:make-migration": "knex migrate:make",
-    "prepare": "husky"
+    "db:make-migration": "knex migrate:make"
   },
   "repository": {
     "type": "git",
@@ -46,14 +45,6 @@
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.6",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
     "prettier": "^3.5.3"
-  },
-  "lint-staged": {
-    "*.js": [
-      "eslint --max-warnings=0",
-      "prettier --write"
-    ]
   }
 }
