--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "esbuild": "^0.25.4",
+    "esbuild-node-externals": "^1.18.0",
     "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^10.1.1",
