--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,10 +1,10 @@
 name = "tracknstick-api"
-main = "worker.js"
+main = "./dist/worker.js"
 compatibility_date = "2024-09-23"
 compatibility_flags = ["nodejs_compat"]
 
 [build]
-command = "npm install"
+command = "npm install && node build-worker.cjs"
 
 [vars]
 NODE_ENV = "production"
