--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,8 @@
     "prettier" // Add prettier plugin
   ],
   "parserOptions": {
-    "ecmaVersion": 12
+    "ecmaVersion": 12,
+    "sourceType": "module"
   },
   "rules": {
     "prettier/prettier": "error", // Run prettier as an ESLint rule
@@ -20,6 +21,54 @@
     "consistent-return": "off", // Allow route handlers to sometimes not return explicitly
     "func-names": "off", // Allow anonymous functions (common in Node callbacks)
     "no-shadow": "warn", // Warn about variable shadowing
-    "import/prefer-default-export": "off" // Allow named exports without a default export
-  }
+    "import/prefer-default-export": "off", // Allow named exports without a default export
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      { "ts": "never", "js": "always" }
+    ], // Add .js, never .ts
+    "import/no-unresolved": "off" // Disable module resolution checks since TypeScript handles this
+  },
+  "overrides": [
+    {
+      "files": ["src/**/*.ts"],
+      "parser": "@typescript-eslint/parser",
+      "parserOptions": {
+        "ecmaVersion": 12,
+        "sourceType": "module",
+        "project": "./tsconfig.json"
+      },
+      "plugins": ["@typescript-eslint"],
+      "extends": ["plugin:@typescript-eslint/recommended"],
+      "rules": {
+        "no-unused-vars": "off", // TypeScript handles this
+        "@typescript-eslint/no-unused-vars": [
+          "warn",
+          { "argsIgnorePattern": "^_" }
+        ],
+        "no-undef": "off", // TypeScript handles this
+        "import/extensions": "off", // Allow TypeScript imports without extensions
+        "no-shadow": "off", // TypeScript handles this
+        "@typescript-eslint/no-shadow": "warn",
+        "no-plusplus": "off",
+        "no-restricted-syntax": "off",
+        "lines-between-class-members": "off"
+      }
+    },
+    {
+      "files": ["*.config.ts", "vitest.config.ts"],
+      "parser": "@typescript-eslint/parser",
+      "parserOptions": {
+        "ecmaVersion": 12,
+        "sourceType": "module"
+      },
+      "plugins": ["@typescript-eslint"],
+      "extends": ["plugin:@typescript-eslint/recommended"],
+      "rules": {
+        "no-unused-vars": "off",
+        "import/extensions": "off",
+        "import/no-extraneous-dependencies": "off"
+      }
+    }
+  ]
 }
