--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240610.0",
     "@types/node": "^20.11.6",
+    "@types/workbox-window": "^4.3.4",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
     "eslint": "^8.57.1",
@@ -64,6 +65,7 @@
     "prettier": "^3.5.3",
     "sqlite3": "^5.1.7",
     "typescript": "^5.3.3",
+    "vite-plugin-pwa": "^1.0.0",
     "vitest": "^1.6.1",
     "wrangler": "^4.15.2"
   }
