--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "db:query": "wrangler d1 execute tracknstick-db --command",
     "db:query:remote": "wrangler d1 execute tracknstick-db --command --remote",
     "predev": "npm run build",
-    "predeploy": "npm run build",
-    "deploy:staging": "wrangler deploy --env staging"
+    "predeploy": "npm run build"
   },
   "repository": {
     "type": "git",
